--- a/TRYAnalyticsScreenIIViewController.xib
+++ b/TRYAnalyticsScreenIIViewController.xib
@@ -6,7 +6,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TRYAnalyticsScreenIIViewController">
             <connections>
-                <outlet property="background" destination="TgI-0v-xEj" id="uJi-go-xE5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -103,7 +102,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="minimumTrackTintColor" red="1" green="0.7778131371" blue="0.34237247850000002" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="maximumTrackTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="thumbTintColor" red="0.60216039539999999" green="0.27704629390000002" blue="0.1239028836" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="thumbTintColor" red="0.9803922176361084" green="0.96078437566757202" blue="0.94117653369903564" alpha="0.0" colorSpace="deviceRGB"/>
                         </slider>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rqk-nk-dbZ">
                             <rect key="frame" x="263" y="4" width="46" height="21"/>
@@ -117,12 +116,6 @@
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zP3-QX-aLD">
                     <rect key="frame" x="0.0" y="252" width="320" height="284"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TgI-0v-xEj">
-                            <rect key="frame" x="-9" y="230" width="134" height="79"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        </imageView>
-                    </subviews>
                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
             </subviews>
