DailyPillTracker does not let user choose if already took the pill; Centralized pill logic in PillManager; PillStreak and LastPillTakeDate added to DailyStats

--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -1766,7 +1766,7 @@
                                 <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="LxU-Oq-XlZ"/>
-                                        <include reference="jPN-td-N3r"/>
+                                        <exclude reference="jPN-td-N3r"/>
                                         <include reference="uux-rV-eue"/>
                                     </mask>
                                 </variation>
